"Move" theme switcher in menu for mobiles; Refactoring switcher scripts for correct working with several switchers; Small custom css for correct "align-items-center" working;

--- a/resources/sass/custom-style/_menus.scss
+++ b/resources/sass/custom-style/_menus.scss
@@ -54,3 +54,13 @@
 .controlbar--sticky .flex{
     align-items: center;
 }
+
+.align-items-center{
+    align-items: center;
+}
+
+@media (max-width: 80rem) {
+    .for-desktop{
+        display: none;
+    }
+}
